Fuck razor pages

--- a/API/Frontend_Project/Pages/Haandvaerker/Create.cshtml
+++ b/API/Frontend_Project/Pages/Haandvaerker/Create.cshtml
@@ -31,10 +31,10 @@
                     <label for="Fagområde" class="control-label">Fagområde</label>
                     <input type="text" asp-for="LocalModel.hvFagomraade" />
                 </div>
-                <div class="form-group">
+                @*<div class="form-group">
                     <label for="ID" class="control-label">ID</label>
                     <input type="number" asp-for="LocalModel.haandvaerkerId" />
-                </div>
+                </div>*@
                 <div class="form-group">
                     <label for="ID" class="control-label">Værktøjskasse ID</label>
                     <input type="number" asp-for="localID" />
