--- a/API/Frontend_Project/Pages/Vaerktoej/Edit.cshtml
+++ b/API/Frontend_Project/Pages/Vaerktoej/Edit.cshtml
@@ -11,9 +11,8 @@
         <div class="col-md-2">
             <form method="post">
                 <div class="form-group">
-
                     <label for="id" class="control-label">ID</label>
-                    <input type="text" asp-for="LocalModel.VTId" placeholder="@Model.LocalModel.VTId" />
+                    <input type="text" asp-for="LocalModel.VTId" placeholder="@Model.LocalModel.VTId" readonly="readonly"/>
                 </div>
                 <div class="form-group">
                     <label for="Fabrikat" class="control-label">Fabrikat</label>
