--- a/API/Frontend_Project/Pages/VaerktoejsKasse/Create.cshtml
+++ b/API/Frontend_Project/Pages/VaerktoejsKasse/Create.cshtml
@@ -11,12 +11,12 @@
     <div class="row">
         <div class="col-md-2">
             <form method="post">
-                <div class="form-group">
+                @*<div class="form-group">
 
                     <label for="id" class="control-label">ID</label>
 
                     <input type="text" asp-for="LocalModel.VTKId" />
-                </div>
+                </div>*@
                 <div class="form-group">
                     <label for="Model" class="control-label">Model</label>
                     <input type="text" asp-for="LocalModel.VTKModel" />
