--- a/API/Frontend_Project/Pages/VaerktoejsKasse/Delete.cshtml
+++ b/API/Frontend_Project/Pages/VaerktoejsKasse/Delete.cshtml
@@ -11,29 +11,34 @@
     <h4>Er du sikker på at du vil slette værktøjskassen @Model.localModel.VTKId ?</h4>
     <hr />
     <form method="post">
-        <dl class="row">
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.localModel.VTKId)
-            </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.localModel.VTKModel)
-            </dd>
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.localModel.VTKFabrikat)
-            </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.localModel.VTKFarve)
-            </dd>
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.localModel.VTKAnskaffet)
-            </dt>
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.localModel.VTKSerienummer)
-            </dt>
-            @*<dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.localModel.EjesAF.ID)
-            </dt>*@
+        <dl class="col">
+            <div class="form-group">
+
+                <label for="ID" class="control-label">ID</label>
+                <input type="text" asp-for="localModel.VTKId" placeholder="@Model.localModel.VTKId" readonly />
+            </div>
+            <div class="form-group">
+                <label for="Model" class="control-label">Model</label>
+                <input type="text" asp-for="localModel.VTKModel" placeholder="@Model.localModel.VTKModel" readonly />
+            </div>
+            <div class="form-group">
+                <label for="Fabrikant" class="control-label">Fabrikant</label>
+                <input type="text" asp-for="localModel.VTKFabrikat" placeholder="@Model.localModel.VTKFabrikat" readonly />
+            </div>
+            <div class="form-group">
+                <label for="Farve" class="control-label">Farve</label>
+                <input type="text" asp-for="localModel.VTKFarve" placeholder="@Model.localModel.VTKFarve" readonly />
+            </div>
+            <div class="form-group">
+                <label for="Anskaffet" class="control-label">Anskaffet</label>
+                <input type="datetime" asp-for="localModel.VTKAnskaffet" placeholder="@Model.localModel.VTKAnskaffet" readonly />
+            </div>
+            <div class="form-group">
+                <label for="Serienummer" class="control-label">Serienummer</label>
+                <input type="string" asp-for="localModel.VTKSerienummer" placeholder="@Model.localModel.VTKSerienummer" readonly />
+            </div>
         </dl>
+        
         <button class="btn btn-info" type="submit">Ja</button>
         <button class="btn btn-info" asp-page="/VaerktoejsKasse/Details" asp-route-id="@Model.localModel.VTKId">Nej</button>
     </form>
