--- a/API/Frontend_Project/Pages/Haandvaerker/Create.cshtml
+++ b/API/Frontend_Project/Pages/Haandvaerker/Create.cshtml
@@ -15,32 +15,20 @@
             <form method="post">
                 <div class="form-group">
                     <label for="Fornavn" class="control-label">Fornavn</label>
-                    <input type="text" asp-for="LocalModel.hvFornavn" />
+                    <input type="text" asp-for="LocalModel.HVFornavn" />
                 </div>
                 <div class="form-group">
                     <label for="Efternavn" class="control-label">Efternavn</label>
-                    <input type="text" asp-for="LocalModel.hvEfternavn" />
+                    <input type="text" asp-for="LocalModel.HVEfternavn" />
                 </div>
                 <div class="form-group">
                     <label for="Ansættelsesdato" class="control-label">Ansættelsesdato</label>
-                    <input type="datetime" asp-for="LocalModel.hvAnsaettelsedato" />
+                    <input type="datetime" asp-for="LocalModel.HVAnsaettelsedato" />
                 </div>
                 <div class="form-group">
                     <label for="Fagområde" class="control-label">Fagområde</label>
-                    <input type="text" asp-for="LocalModel.hvFagomraade" />
+                    <input type="text" asp-for="LocalModel.HVFagomraade" />
                 </div>
-                @*<div class="form-group">
-                    <label for="ID" class="control-label">ID</label>
-                    <input type="number" asp-for="LocalModel.haandvaerkerId" />
-                </div>*@
-<<<<<<< HEAD
-
-=======
-                <div class="form-group">
-                    <label for="ID" class="control-label">Værktøjskasse ID</label>
-                    <input type="number" asp-for="localID" />
-                </div>
->>>>>>> b77cd08bc372da93663dfe3043fcb561faa9cc00
                 <div class="form-group">
                     <button type="submit" class="btn btn-primary shadow">Submit</button>
                 </div>
