--- a/API/Frontend_Project/Pages/Vaerktoej/Create.cshtml
+++ b/API/Frontend_Project/Pages/Vaerktoej/Create.cshtml
@@ -12,11 +12,6 @@
         <div class="col-md-2">
             <form method="post">
                 <div class="form-group">
-
-                    <label for="id" class="control-label">ID</label>
-                    <input type="text" asp-for="LocalModel.VTId" />
-                </div>
-                <div class="form-group">
                     <label for="Fabrikat" class="control-label">Fabrikat</label>
                     <input type="text" asp-for="LocalModel.VTFabrikat" />
                 </div>
@@ -37,8 +32,8 @@
                     <input type="datetime" asp-for="LocalModel.VTAnskaffet" />
                 </div>
                 <div class="form-group">
-                    <label for="LiggeriVKT" class="control-label">Tilhører værktøjskasse</label>
-                    <input type="text" asp-for="LocalModel.LiggerIvtk" />
+                    <label for="LiggeriVKT" class="control-label">værktøjskasse SerieNummer</label>
+                    <input type="text" asp-for="SerieNummer" />
                 </div>
                 <div class="form-group">
                     <button type="submit" class="btn btn-primary shadow">Submit</button>
