--- a/API/Frontend_Project/Pages/Index.cshtml
+++ b/API/Frontend_Project/Pages/Index.cshtml
@@ -5,6 +5,8 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about asdasdsd <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Velkommen til DISP Delopgave 1 </h1>
+    <p>Disse razorpages er en del af delopgave 1 for faget Distribuerede Systemer i Praksis. 
+        I menubaren ovenfor er det muligt at gå ind under Håndværker, Værktøjs kasse og Værktøj. 
+        Heri kan der laves nye objekter, objekters detaljer kan ses og de kan slettes. </p>
 </div>
